fix(homePage): add visible overflow to svg

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -17,6 +17,9 @@
         max-width: 500px;
         min-width: 350px;
         transform: translateY(-50px);
+        svg{
+            overflow: visible;
+        }
     }
 
     .solid-logo1 {
